# photochem_clima_data

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
CIA/: CH4-CH4.h5  CO2-CH4.h5  N2-H2.h5  README.md
aerosol_xsections/: README.md  aerosol_xsections.ipynb
aerosol_xsections/khare1984/: mie_khare1984.h5
henry/: README.md  henry.yaml
kdistributions/: CH4.h5  CO2.h5  NH3.h5  README.md
misc/: README.md
photochem_clima_data/: __init__.py  driver.py  reactions.py  utils.py  xsections.py
photochem_clima_data/data/: aasmacros.sty  bib.bib
photochem_clima_data/data/CIA/: CO2-CO2.h5  CO2-H2.h5  N2-CH4.h5  README.md
photochem_clima_data/data/aerosol_xsections/: README.md
photochem_clima_data/data/kdistributions/: C2H2.h5  C2H6.h5  CH4.h5  CO.h5  CO2.h5  H2O.h5  HCl.h5  N2O.h5  NH3.h5  O2.h5  O3.h5  OCS.h5  README.md  SO2.h5  bins.h5
photochem_clima_data/data/rayleigh/: README.md  rayleigh.yaml
photochem_clima_data/data/reaction_mechanisms/: README.md  condensate_thermo.yaml  (+1 more)
rayleigh/: rayleigh.yaml
reaction_mechanisms/: README.md  zahnle_earth.yaml
xsections/: C2H2.h5  C2H6.h5  C3H6.h5  CH3CN.h5  CO.h5  CO2.h5  CS2.h5  Cl2.h5  H2O.h5  H2O2.h5  H2S.h5  HCCCN.h5  HCl.h5  HNCO.h5  HO2.h5  HOCl.h5  HS.h5  HSO.h5  He.h5  N.h5  N2.h5  N2H4.h5  N2O.h5  NH3.h5  NO.h5  O.h5  OCS.h5  OClO.h5  README.md  S.h5  S2.h5  S8.h5  SO3.h5  bins.h5  check_consistency.py  metadata.yaml
xsections/H2/: H2_+_hv_=_H_+_H.txt  H2_xs.txt
xsections/H2O/: H2O_+_hv_=_H2_+_O1D.txt  H2O_+_hv_=_OH_+_H.txt  H2O_+_hv_=_O_+_H_+_H.txt
xsections/S8/: S8_+_hv_=_S8.txt
(+42 files in other folders)
